k3s/apps/sillytavern/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sillytavern
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8000
  selector:
    app: sillytavern
